Fixed broken CSS.

--- a/src/main/resources/doc/support/www/docstyle.css
+++ b/src/main/resources/doc/support/www/docstyle.css
@@ -11,7 +11,7 @@ div#map {
 ul#maptree {
 	display: block;
 	margin-left: 15px;
-	margin-right; 10px;
+	margin-right: 10px;
 	padding: 0px;
 	position: absolute;
 	top: 100px;
